--- a/src/main/webapp/css/table.css
+++ b/src/main/webapp/css/table.css
@@ -54,3 +54,14 @@ select {
     color: white;
     font-size: 30px;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
