--- a/src/main/webapp/css/table.css
+++ b/src/main/webapp/css/table.css
@@ -65,3 +65,7 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     -moz-appearance: textfield;
 }
+
+.input-group {
+    display: flex;
+}
